fixed comment box spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,7 +130,7 @@ form label {
 }
 
 .comment-form {
-  margin-bottom: 5%;
+  margin: 1em 0 2em 0;
 }
 
 .comment {
